webapp/src/components/ActivityPage/Transaction/Transaction.css
.Transaction {
  word-break: break-word;
  font-size: 15px;
}

.Transaction.with-link:hover {
  background-color: var(--dark-gray);
  border-radius: 10px;
  cursor: pointer;
}

.Transaction .transaction-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

.Transaction .transaction-container-left {
  display: flex;
  align-items: center;
  flex: 1 0 auto;
  opacity: 0.5;
}

.Transaction.with-link .transaction-container-left {
  opacity: 1;
}

.Transaction .transaction-container-right {
  display: flex;
  align-items: center;
  flex: none;
}

.Transaction .transaction-text-container {
  display: flex;
  align-items: center;
  font-weight: 100;
  font-size: 14px;
}

.Transaction .parcels-link {
  margin-right: 10px;
}

.Transaction .parcels-link:last-child {
  margin-right: 0;
}

.Transaction .transaction-avatar {
  width: 48px;
  height: 48px;
  margin-right: 15px;
  float: left;
  border-radius: 8px;
  overflow: hidden;
  flex: none;
}

.Transaction .transaction-timestamp {
  display: inline-block;
  color: var(--gray);
  margin-left: 8px;
}

.Transaction .transaction-icon {
  height: 100%;
  float: right;
  margin-top: 10px;
}

@media (min-width: 768px) {
  .Transaction .transaction-container-right {
    display: flex;
    align-items: center;
    flex: none;
  }
}

@media (max-width: 768px) {
  .Transaction .transaction-timestamp {
    margin-left: 0px;
  }

  .Transaction .transaction-avatar {
    margin-left: 0px;
    display: none;
  }

  .Transaction .transaction-text-container {
    flex-flow: column;
    align-items: flex-start;
  }

  .Transaction .transaction-text {
    width: 100%;
  }
  .Transaction .transaction-text-container {
    width: calc(100% - 24px);
  }
  .Transaction .transaction-container-left {
    width: calc(100% - 196px);
  }
}

